:recycle: :feat Ajustando código do Docker com nginx
